chore(seo): inject real GTM container, AdSense client, update favicon path

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <link rel="alternate" hreflang="x-default" href="https://checklistsilksong.com/" />
 
   <!-- Favicons (replace with real generated set if available) -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/silksonglogo.png" />
-  <link rel="apple-touch-icon" href="/assets/images/silksonglogo.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
   <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials" />
 
   <!-- Open Graph / Facebook -->
@@ -75,13 +75,12 @@
       'event': 'app_meta'
     });
   </script>
-  <!-- Google Tag Manager (replace GTM-XXXXXXX with real container) -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5N84DKCJ');</script>
   <!-- End Google Tag Manager -->
   <!-- Ads / Monetization (AdSense snippet inserted when client ID provided) -->
-  <!--
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
-  -->
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9707168065012640" crossorigin="anonymous"></script>
 
   <style>
     .ad-container {
@@ -245,11 +244,11 @@
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5N84DKCJ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <!-- AdSense placeholder (uncomment when real publisher ID added) -->
-<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXX" crossorigin="anonymous"></script> -->
+<!-- AdSense script already included in <head>; keep this placeholder commented to avoid double load -->
 <header>
   <div class="hero">
     <div class="controls">
