feat(pwa+tracking): add manifest, service worker, dataLayer events, privacy page

--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
     <div class="ad-placeholder"></div>
   </div>
   <span data-i18n="footer.note">Placeholder dataset based on Hollow Knight – will be replaced with Silksong data.</span>
+  <br><a href="/privacy.html" style="color:var(--accent);font-size:0.65rem;">Privacy & Cookies</a>
 </footer>
 <script type="module" src="./src/js/main.js"></script>
 <script>
