fix(favicon): add extra <link> variants to improve browser tab icon detection

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
   <link rel="alternate" hreflang="es" href="https://checklistsilksong.com/?lang=es" />
   <link rel="alternate" hreflang="x-default" href="https://checklistsilksong.com/" />
 
-  <!-- Favicons (replace with real generated set if available) -->
+  <!-- Favicons -->
+  <!-- Absolute path (custom domain) -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png" />
+  <!-- Relative path fallback (GitHub Pages subpath safety) -->
+  <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+  <link rel="shortcut icon" href="assets/images/favicon.png" />
   <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
   <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials" />
 
