--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
   <link rel="alternate" hreflang="es" href="https://checklistsilksong.com/?lang=es" />
   <link rel="alternate" hreflang="x-default" href="https://checklistsilksong.com/" />
 
-  <!-- Favicons -->
-  <!-- Absolute path (custom domain) -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png" />
-  <!-- Relative path fallback (GitHub Pages subpath safety) -->
-  <link rel="icon" type="image/png" href="assets/images/favicon.png" />
-  <link rel="shortcut icon" href="assets/images/favicon.png" />
-  <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
+  <!-- Favicons & App Icons -->
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico?v=2" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png?v=2" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/assets/images/favicon-48x48.png?v=2" />
+  <link rel="icon" type="image/png" sizes="64x64" href="/assets/images/favicon-64x64.png?v=2" />
+  <link rel="icon" type="image/png" sizes="128x128" href="/assets/images/favicon-128.png?v=2" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/images/favicon-192.png?v=2" />
+  <link rel="icon" type="image/png" sizes="256x256" href="/assets/images/favicon-256.png?v=2" />
+  <link rel="icon" type="image/png" sizes="384x384" href="/assets/images/favicon-384.png?v=2" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/images/favicon-512.png?v=2" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon-192.png?v=2" />
   <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials" />
 
   <!-- Open Graph / Facebook -->
