refactor(ui): remove theme toggle button and logic; fix deploy by installing sharp dependency

--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@
       </select>
       <button id="resetBtn" data-i18n="reset">Reset</button>
       <button id="toTopBtn" aria-label="Back to top" title="Back to top">↑</button>
-      <button id="themeBtn" aria-label="Toggle theme" title="Toggle theme">🌓</button>
     </div>
     <img src="./assets/images/ss3.png" alt="Silksong" loading="lazy" decoding="async" />
     <h1 data-i18n="app.title">100% Completion Checklist</h1>
@@ -317,7 +316,7 @@
   body.theme-light .cat-header { background:#eef2f6; }
   body.theme-light .progress-floating { background:rgba(255,255,255,0.85); border-color:#cbd6df; }
   body.theme-light #itemsRemaining, body.theme-light #itemsRemainingFloating { background:#dbe5ec; color:#2d3a44; box-shadow:0 0 0 1px #b8c8d3; }
-  body.theme-light .controls #toTopBtn, body.theme-light #themeBtn, body.theme-light #resetBtn, body.theme-light #langSel { background:rgba(255,255,255,0.75); border-color:#c5d2db; color:#243039; }
+  body.theme-light .controls #toTopBtn, body.theme-light #resetBtn, body.theme-light #langSel { background:rgba(255,255,255,0.75); border-color:#c5d2db; color:#243039; }
   body.theme-light .progress-bar { background:#d8e1e9; box-shadow:0 0 0 1px #c2ccd4 inset; }
   body.theme-light footer { background:#e9edf0; color:#4d5963; }
   body.theme-light .tooltip { background:#ffffff; border-color:#cfd9e1; color:#1d242b; }
